add user and video models

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
 PORT=8000
 MONGODB_URL = mongodb+srv://ayush:password@cluster0.k8lze9t.mongodb.net
 CORS_URL = *
+
+# any string  
+ACCESS_TOKEN_SECRET = anystring
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = anystringuse
+REFRESH_TOKEN_EXPIRY = 10d
