--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ ACCESS_TOKEN_SECRET = anystring
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = anystringuse
 REFRESH_TOKEN_EXPIRY = 10d
+
+#cloudinary
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
